<resources>
    <string name="app_name">BarberUp</string>
    <string name="title_activity_maps">Map</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="do_you_have_account">Don\'t have an account?</string>
    <string name="availability">Availability</string>
    <string name="review">Reviews</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
